# Toolscreen

./: .gitignore  CMakeLists.txt  CREDITS.md  README.md  mcsr_username_index.txt  mcsr_username_index.txt.meta.json
scripts/: boat_eye_calibrate.ps1  boat_eye_calibrate.sh  build_and_install_toolscreen.ps1  host_mcsr.sh  mcsr_cache_service.py  mcsr_stats_db.py  package_release.ps1  test_mcsr_api.py  validate_mcsr_stack.sh
scripts/resources/boat_eye_senses/: boatEyeSensitivitiesv1_16.txt
src/: config_defaults.h  config_toml.cpp  config_toml.h  default.toml  dllmain.cpp  gui.cpp  gui.h  input_hook.cpp  input_hook.h  logic_thread.cpp  logic_thread.h  mirror_thread.cpp  mirror_thread.h  notes_overlay.cpp  notes_overlay.h  practice_world_launch.cpp  practice_world_launch.h  render.cpp  render_thread.cpp  resource.h  shared_contexts.cpp  shared_contexts.h  stronghold_companion_overlay.cpp  stronghold_companion_overlay.h  toolscreen.rc  utils.cpp  version.h
src/gui/: tab_appearance.inl  tab_basic_boat.inl  tab_basic_general.inl  tab_basic_macros.inl  tab_basic_mcsr.inl  tab_basic_notes.inl  tab_basic_other.inl  tab_basic_practice.inl  tab_basic_stronghold.inl  tab_hotkeys.inl  tab_images.inl  tab_inputs.inl  tab_mirrors.inl  tab_misc.inl  tab_modes.inl  tab_mouse.inl  tab_settings.inl  tab_window_overlays.inl
